--- a/src/main/resources/templates/register_user.html
+++ b/src/main/resources/templates/register_user.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" xmlns:th="http://www.thymeleaf.org"> <!-- Tymeleafを使う時はxmlns:thを付ける -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>ネットでピザ注文</title>
-<link href="../static/css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrap.css" rel="stylesheet">
 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -25,7 +25,7 @@
 							class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="item_list.html"> <!-- 企業ロゴ --> <img
-						alt="main log" src="../static/img_pizza/header_logo.png" height="35">
+						alt="main log" src="img_toy/header_logo.png" height="35">
 					</a>
 				</div>
 
@@ -45,19 +45,19 @@
 		<div class="row">
 			<div class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-sm-10 col-xs-12">
 				<div class="well">
-					<form method="post" action="item_list.html">
+					<form method="post" action="item_list.html" th:action="@{/register/insert}" th:object="${registerUserForm}">
 						<fieldset>
 							<legend>ユーザ登録</legend>
 							<div class="form-group">
 								<label for="inputName">名前:</label><label
 									class="control-label" style="color: red" for="inputError">名前を入力してください</label>
-								<input type="text" id="inputName" class="form-control"
+								<input type="text" name="name" id="inputName" class="form-control"
 									placeholder="Name">
 							</div>
 							<div class="form-group">
 								<label for="inputEmail">メールアドレス:</label><label
 									class="control-label" style="color: red" for="inputError">メールアドレスを入力してください</label>
-								<input type="text" id="inputEmail" class="form-control"
+								<input type="text" name="email" id="inputEmail" class="form-control"
 									placeholder="Email">
 							</div>
 							<div class="form-group">
@@ -65,7 +65,7 @@
 								<label
 									class="control-label" style="color: red" for="inputError">郵便番号を入力してください</label>
 									<input type="button" value="住所検索">
-								<input type="text" id="inputZipcode" class="form-control"
+								<input type="text" name="zipcode" id="inputZipcode" class="form-control"
 									placeholder="Zipcode">
 								
 							</div>
@@ -73,21 +73,21 @@
 								<label for="inputAddress">住所:</label>
 								<label
 									class="control-label" style="color: red" for="inputError">住所を入力してください</label>
-								<input type="text" id="inputAddress" class="form-control"
+								<input type="text" name="address" id="inputAddress" class="form-control"
 									placeholder="Address">
 							</div>
 							<div class="form-group">
 								<label for="inputTel">電話番号:</label>
 								<label
 									class="control-label" style="color: red" for="inputError">電話番号を入力してください</label>
-								<input type="text" id="inputTel" class="form-control"
+								<input type="text" name="telephone" id="inputTel" class="form-control"
 									placeholder="Tel">
 							</div>
 							<div class="form-group">
 								<label for="inputPassword">パスワード:</label>
 								<label
 									class="control-label" style="color: red" for="inputError">パスワードを入力してください</label>
-								<input type="text" id="inputPassword" class="form-control"
+								<input type="text" name="password" id="inputPassword" class="form-control"
 									placeholder="Password">
 							</div>
 							<div class="form-group">
@@ -111,6 +111,6 @@
 	<!-- end container -->
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="../static/js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
