--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -45,7 +45,7 @@
 		<div class="row">
 			<div class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-sm-10 col-xs-12">
 				<div class="well">
-					<form method="post" action="item_list.html" th:action="@{/login}" th:object="${loginUserForm}">
+					<form method="post" action="item_list.html" th:action="@{/login/user_login}" th:object="${loginUserForm}">
 						<fieldset>
 							<legend>
 								ログイン
