--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -51,7 +51,7 @@
 								ログイン
 							</legend>
 							<label
-									class="control-label" style="color: red" for="inputError">メールアドレス、またはパスワードが間違っています</label>
+									class="control-label" style="color: red" for="inputError" th:if="${message}" th:text="${message}"></label>
 							<div class="form-group">
 								<label for="inputEmail">メールアドレス:</label>
 								<input type="text" name="email" id="inputEmail" class="form-control"
