--- a/src/main/resources/templates/cart_list.html
+++ b/src/main/resources/templates/cart_list.html
@@ -36,8 +36,8 @@
 					<p class="navbar-text navbar-right">
 						<a href="cart_list.html" class="navbar-link">ショッピングカート</a>&nbsp;&nbsp;
 						<a href="order_history.html" class="navbar-link">注文履歴</a>&nbsp;&nbsp;
-						<a href="login.html" class="navbar-link">ログイン</a>&nbsp;&nbsp;
-						<a href="item_list.html" class="navbar-link">ログアウト</a>
+						<a href="login.html" class="navbar-link" th:href="@{/login}">ログイン</a>&nbsp;&nbsp;
+						<a href="item_list.html" class="navbar-link" th:href="@{/login/logout}">ログアウト</a>
 					</p>
 				</div>
 				<!-- /.navbar-collapse -->
@@ -80,7 +80,7 @@
 						<tr>
 							<td>
 								<div class="center">
-									<img src="../static/img_pizza/1.jpg"
+									<img src="img_toy/1.jpg"
 										class="img-responsive img-rounded" width="100" height="300"><br>
 									じゃがバターベーコン
 								</div>
